Fix image display in dark mode

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -14,3 +14,11 @@
     object-fit: cover !important;
     /* Crop nicely if needed */
 }
+
+html[data-theme="dark"] .bd-content div.cell_output img {
+    background-color: transparent;
+}
+
+html[data-theme="dark"] .bd-content img:not(.only-dark, .dark-light) {
+    background-color: transparent;
+}
